--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node main.js"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
     "axios": "^0.19.0",
-    "discord.js": "github:discordjs/discord.js",
+    "discord.js": "^11.5.1",
     "express": "^4.17.1",
     "node-opus": "^0.3.3",
     "request": "^2.88.0",
