--- a/package.json
+++ b/package.json
@@ -5,20 +5,22 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node main.js"
+    "start": "node client.js"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
     "axios": "^0.19.0",
-    "discord.js": "^11.5.1",
+    "discord.js": "github:discordjs/discord.js",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "node-opus": "^0.3.3",
     "request": "^2.88.0",
     "simple-youtube-api": "^5.2.1",
     "youtube-dl": "^2.1.0",
     "youtube-search": "^1.1.4",
-    "ytdl-core": "^1.0.3"
+    "ytdl-core": "^1.0.3",
+    "sodium": "^3.0.2",
+    "@discordjs/opus": "^0.1.0"
   },
   "engines": {
     "node": "12.7.0"
