--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@discordjs/opus": "^0.1.0",
+    "audio-buffer": "^4.0.4",
     "axios": "^0.19.0",
     "discord.js": "github:discordjs/discord.js",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "request": "^2.88.0",
     "simple-youtube-api": "^5.2.1",
+    "sodium": "^3.0.2",
     "youtube-dl": "^2.1.0",
     "youtube-search": "^1.1.4",
-    "ytdl-core": "^1.0.3",
-    "sodium": "^3.0.2",
-    "@discordjs/opus": "^0.1.0"
+    "ytdl-core": "^1.0.3"
   },
   "engines": {
     "node": "12.7.0"
