--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "audius-music",
+  "name": "kanbot.js",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "client.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node client.js"
@@ -10,19 +10,19 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.19.0",
-    "discord.js": "github:discordjs/discord.js",
+    "@discordjs/opus": "github:discordjs/opus",
+    "discord.js": "github:discordjs/discord.js#fe7df708e44e0280dfaf0f8e457b154781bb5140",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "request": "^2.88.0",
+    "klasa": "github:dirigeants/klasa#settings",
+    "ytdl-core": "^1.0.7",
+    "request": "^2.88.2",
     "simple-youtube-api": "^5.2.1",
-    "youtube-dl": "^2.1.0",
-    "youtube-search": "^1.1.4",
-    "ytdl-core": "^1.0.3",
-    "sodium": "^3.0.2",
-    "@discordjs/opus": "^0.1.0"
+    "m3u8-parser": "^4.4.2",
+    "music-metadata": "^6.3.3",
+    "axios": "^0.19.2"
   },
   "engines": {
-    "node": "12.7.0"
+    "node": "11"
   }
 }
