--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "simple-youtube-api": "^5.2.1",
     "m3u8-parser": "^4.4.2",
     "music-metadata": "^6.3.3",
-    "axios": "^0.19.2"
+    "axios": "^0.19.2",
+    "sodium": "^3.0.2"
   },
   "engines": {
     "node": "11"
