--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "form-data": "^3.0.0",
-    "klasa": "github:dirigeants/klasa",
+    "klasa": "0.5.0",
     "m3u8-parser": "^4.4.2",
     "music-metadata": "^6.3.5",
     "request": "^2.88.2",
