--- a/package.json
+++ b/package.json
@@ -17,15 +17,16 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "form-data": "^3.0.0",
-    "klasa": "0.5.0",
+    "klasa": "github:dirigeants/klasa",
     "m3u8-parser": "^4.4.2",
     "music-metadata": "^6.3.5",
     "request": "^2.88.2",
     "simple-youtube-api": "^5.2.1",
     "spotify-web-api-node": "^4.0.0",
-    "ytdl-core": "^1.0.7",
+    "ytdl-core": "^3.1.1",
     "sodium": "^3.0.2",
-    "@audius/audius.js": "0.0.4"
+    "@audius/audius.js": "0.0.4",
+    "ytdl-core-discord": "^1.2.0"
   },
   "engines": {
     "node": "12"
