--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "ytdl-core": "^3.1.1",
     "sodium": "^3.0.2",
     "@audius/audius.js": "0.0.4",
-    "ytdl-core-discord": "^1.2.0"
+    "ytdl-core-discord": "^1.2.0",
+    "needle": "^2.5.0"
   },
   "engines": {
     "node": "12"
